Try to fix overflow for mobile Safari
Safari Mobile is probably well-intentioned with whatever it's doing, but
it only partially respects overflow-x by default and adds unsightly
padding to the navigation bar. Hopefully just changing overflow rules on
the app container will fix this noise.

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ table {
     font-size: 2.5vmax;
 }
 
+#app {
+    overflow-x: scroll;
+}
+
 .nav-menu {
     margin-top: 5%;
     border-bottom: dotted 1px #2faded;
@@ -32,6 +36,10 @@ hr {
 @media screen and (min-width: 64em) {
     div, table {
         font-size: 1.5vw;
+    }
+
+    #app {
+        overflow-x: auto;
     }
 
     .nav-menu {
